Sun Sep  9 19:14:46 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/belkin-hid.[ch]: Version should not be defined in .h
   file to prevent needless rebuilds of the usbhid-ups.o (it was
   duplicated in both and I removed the wrong instance).
 - drivers/libhid.[ch]: The hidparser.h file should not be included
   in the header file.
 - drivers/libshut.c: Don't allocate space for the report descriptor
   dynamically. We already know the maximum size and don't need it
   anymore after leaving the open function.
 - drivers/libusb.c: Same as above.
 - drivers/tripplite_usb.c: Fix potential segfault.
 - drivers/usbhid-ups.c: The 'explore' subdriver should be the first
   in the list of subdrivers.

Sat Sep  8 20:46:25 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - changed the default installation directory for pkg-config files,
   following a suggestion of Stanislav Brabec. The new default
   location is ${libdir}/pkgconfig. This is still configurable via
   the --with-pkgconfig-dir=PATH option and can be turned off with
   --without-pkgconfig-dir.

Sat Sep  8 10:53:02 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/libhid.c: Remove the remains of what once was an attempt
   to split the HIDDumpTree (I can't rembember why I wanted this in
   the first place).

Sat Sep  8 10:46:32 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/usbhid-ups.[ch],Makefile.am:
   - Add option 'matching = checksum' that in addition to the
     'normal' matching, will also compare the SHA-1 checkum of the
     report descriptor with the one that was read on startup.

Fri Sep  7 11:51:22 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 - fixes the NUT versioning on exported SVN trees, due to i18n
   translation of the "exported" keyword. This resulted in
   <nut version>- instead of <nut version> only, without the "-"

Wed Sep  5 19:02:51 UTC 2007 / Arjen de Korte <arjen@de-korte.org>
